name:                private-values
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ne-sachirou/private-values#readme
license:             GPL-3
license-file:        LICENSE
author:              ne_Sachirou
maintainer:          utakata.c4se@gmail.com
copyright:           2015 ne_Sachirou
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Project
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , directory >= 1.2
                     , regex-tdfa >= 1.2
                     , split >= 0.2
                     , template-haskell >= 2.10
                     , yaml >= 0.8
                     , yaml-light >= 0.1
  default-language:    Haskell2010

executable private-values
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , regex-tdfa
                     , split
                     , template-haskell
                     , yaml
                     , yaml-light
                     , private-values
  default-language:    Haskell2010

test-suite private-values-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , private-values
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ne-sachirou/private-values
