name:                private-values
version:             0.1.0
synopsis:            Delete private values and private files from youre git repos
description:         Please see README.md
homepage:            http://github.com/ne-sachirou/private-values#readme
license:             GPL-3
license-file:        LICENSE
author:              ne_Sachirou
maintainer:          utakata.c4se@gmail.com
copyright:           2015 ne_Sachirou
category:            Cli
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FileUtil, Lib, Project, YamlUtil
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.8
                     , bytestring >= 0.10
                     , directory >= 1.2
                     , filepath >= 1.4
                     , lens >= 4.12
                     , lens-aeson >= 1.0
                     , MissingH >= 1.3
                     , regex-tdfa >= 1.2
                     , split >= 0.2
                     , template-haskell >= 2.10
                     , text >= 1.2
                     , unordered-containers >= 0.2
                     , utf8-string >= 1.0
                     , yaml >= 0.8
  default-language:    Haskell2010

executable private-values
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , private-values
  default-language:    Haskell2010

test-suite private-values-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directory
                     , hlint
                     , hspec >= 2.1
                     , QuickCheck >= 2.8
                     , private-values
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ne-sachirou/private-values
