cabal-version:       3.0
name:                private-values
version:             0.1.0
synopsis:            Delete private values and private files from youre git repos
description:         Please see README.md
homepage:            http://github.com/ne-sachirou/private-values#readme
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              ne_Sachirou
maintainer:          utakata.c4se@gmail.com
copyright:           2015-2019 ne_Sachirou
category:            Cli
build-type:          Simple
-- extra-source-files:

library
  hs-source-dirs:      src
  exposed-modules:     FileUtil, Lib, Project, YamlUtil
  build-depends:       base >= 4.0 && < 5
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , lens
                     , lens-aeson
                     , MissingH
                     , regex-tdfa
                     , split
                     , template-haskell
                     , text
                     , unordered-containers
                     , utf8-string
                     , yaml
  default-language:    Haskell2010

executable private-values
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , private-values
  default-language:    Haskell2010

test-suite private-values-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directory
                     , hlint
                     , hspec
                     , QuickCheck
                     , private-values
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ne-sachirou/private-values
